A few assorted changes to the workings of keyboard events in the Primo search box. Committing together, because I'm not always sure where one fix ends and the other begins.  Part of this is trying to get IE/Edge's 'erase me' X in the box to not be so huge, as well as remove the dropdown below when clicking on the x to delete the search box's contents (hence the 'input' event in addition to 'keyup').  I prevented the scope dropdown at right from opening when tabbing to it if they key you pressed was shift/ctrl/alt/meta/escape, since it was odd, for example, to have it open, kinda, upon shift+tab.  I also, when opening that dropdown with the keyboard, set its focus to whatever you currently had set, in case you had changed it before.  Not totally sure how I feel about this one: I changed 'Enter' while on a scope in the dropdown at right to just close the dropdown (in addition to setting the scope). Previously focus was either going back into the search box if it was empty (which mirrors the current site, though the dropdown is on the other side), or it wasn't empty, it was being buggy and searching libsite (see issue in comment 3 of #140).  It feels slightly odd now, since focus goes away visually (though tabbing goes straight to the magnifying glass) and you have to hit tab or shift+tab again to be complete the search, but at least it's no longer buggy, and it's consistent with click behavior.  I also added a touchstart event, since the dropdowns (both at right and the one that appears after typing into the search box) weren't going away when clicking/tapping elsewhere.  This obviates the need to fix another issue I saw, which was the bottom dropdown covering up the right dropdown when they were both open.

--- a/libsite7b/css/header.css
+++ b/libsite7b/css/header.css
@@ -260,6 +260,10 @@
   flex: 1;
   outline: none;
 }
+#search-input::-ms-clear {
+  height: 20px;
+  width: 20px;
+}
 #internal-search #search-input {
   height: 36px;
   height: auto;
